# UMABenchmarks

./: README.md  bm.plt  cuProf.py  nrmData.txt  percProf.plt  test.plt
cuLibraries/conjugateGradient/: CMakeLists.txt
cuLibraries/histEqualizationNPP/: CMakeLists.txt
cuLibraries/simpleCUFFT/: CMakeLists.txt
microbenchmarks/: CMakeLists.txt  main.cpp
microbenchmarks/include/: CpuTimer.h  microbenchmarks.h  util.h
microbenchmarks/kernels/: AllGpuAllCpu.cu  AllGpuSubCpu.cu  CpuTimer.cpp  SubGpuAllCpu.cu  SubGpuAllCpu_r.cu  gsRelax.cu  main.cpp  microbenchmarks.h  misc.cu  util.h
microbenchmarks/scripts/: Benchmarker.py  DataPlot.py  Profiler.py  RunTests.py
microbenchmarks/scripts/data/: AGAC_1024.txt  AGAC_128.txt  AGAC_2048.prof  AGAC_2048.txt  AGAC_256.txt  AGAC_512.txt  AGSC_1024.txt  AGSC_128.txt  AGSC_2048.prof  AGSC_2048.txt  AGSC_256.txt  AGSC_512.txt  Relax_1024.txt  Relax_128.txt  Relax_2048.prof  Relax_2048.txt  Relax_256.txt  Relax_512.txt  SGACR_1024.txt  SGACR_128.txt  SGACR_2048.prof  SGACR_2048.txt  SGACR_256.txt  SGACR_512.txt  SGAC_1024.txt  SGAC_128.txt  SGAC_2048.prof  SGAC_2048.txt  SGAC_256.txt  SGAC_512.txt
rodinia_3.0/: Makefile
rodinia_3.0/common/: make.config
rodinia_3.0/cuda/backprop/: Makefile
rodinia_3.0/cuda/bfs/: Makefile
rodinia_3.0/cuda/cfd/: Makefile
rodinia_3.0/cuda/dwt2d/: Makefile
rodinia_3.0/cuda/gaussian/: Makefile  gaussian.cu  gaussianUMA.cu
rodinia_3.0/cuda/heartwall/: Makefile
rodinia_3.0/cuda/hotspot/: Makefile
rodinia_3.0/cuda/hybridsort/: Makefile
rodinia_3.0/cuda/kmeans/: Makefile
rodinia_3.0/cuda/lavaMD/: makefile
rodinia_3.0/cuda/leukocyte/CUDA/: Makefile
rodinia_3.0/cuda/lud/cuda/: Makefile  lud.cu  ludUMA.cu
rodinia_3.0/cuda/mummergpu/src/: Makefile
rodinia_3.0/cuda/myocyte/: Makefile
rodinia_3.0/cuda/nn/: Makefile  nn_cuda.cu
rodinia_3.0/cuda/nw/: Makefile  needle.cu  needleUMA.cu
rodinia_3.0/cuda/particlefilter/: Makefile
rodinia_3.0/cuda/pathfinder/: Makefile  pathfinder.cu  pathfinderUMA.cu
rodinia_3.0/cuda/srad/srad_v1/: makefile
rodinia_3.0/cuda/srad/srad_v2/: Makefile  srad.cu  sradUMA.cu
rodinia_3.0/cuda/streamcluster/: Makefile
